--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+.banner {
+  position: relative;
+}
+.banner img {
+  display: block;
+  margin: 0 auto;
+}
 nav {
   display: flex;
   justify-content: space-around;
