--- a/style.css
+++ b/style.css
@@ -12,15 +12,16 @@
   display: block;
   margin: 0 auto;
   width: 100%;
+  height: 500px;
   max-width: 100%;
-  z-index: -1;
+  border-bottom: 10px solid gray;
 }
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   font-family: sans-serif;
-  background-color: tomato;
+  background-color: gray;
   min-height: 50px;
 }
 
@@ -64,6 +65,7 @@ nav {
   body {
     overflow-x: hidden;
   }
+
   .logo h4 {
     font-size: 14px;
   }
@@ -84,7 +86,7 @@ nav {
     height: 90vh;
     right: 0px;
     top: 8vh;
-    background-color: rgba(176, 196, 222, 0.418);
+    background-color: rgba(128, 128, 128, 0.596);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -94,7 +96,7 @@ nav {
   }
 
   .nav-links a {
-    color: tomato;
+    color: mintcream;
   }
 }
 
